...
import 'package:sdp_wits_services/globals.dart' as globals;
import 'Accpted.dart';
import 'All.dart';

//CCDU landing page.
class CCDU extends StatefulWidget {
  const CCDU({
    Key? key,
  }) : super(key: key);

  @override
  State<CCDU> createState() => _CCDUState();
}
...
