...
                    icon: Icon(
                        key: Key('breakfastTab'),
                        Icons.breakfast_dining_rounded)),
                Tab(
                    text: 'Lunch',
                    icon:
                        Icon(key: Key('lunchTab'), Icons.lunch_dining_rounded)),
                Tab(
                    text: 'Dinner',
                    icon: Icon(
                        key: Key('dinnerTab'), Icons.dinner_dining_rounded)),
              ],
            ),
          ),
          body: TabBarView(children: [
            AccordionWidget(type: "breakfast"),
            AccordionWidget(type: "lunch"),
...
