...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      body: Skeleton(
        name: "Vehicles",
        btnAction: "Next",
        itemsList: ItemList(),
      ),
      floatingActionButton:currVehicleIndex==null?null: FloatingActionButton(
        onPressed: () {startShift();},
        child: Icon(
...
